@@ -1788,8 +1788,9 @@ libstart_lib_test.a: start_lib_test_1.o
 check_SCRIPTS += memory_test.sh
 check_DATA += memory_test.stdout
 MOSTLYCLEANFILES += memory_test.stdout memory_test memory_test.o
-memory_test: memory_test.s
-	$(COMPILE) -c $< -o memory_test.o
+memory_test.o: memory_test.s
+	$(COMPILE) -o $@ -c $<
+memory_test: memory_test.o gcctestdir/ld $(srcdir)/memory_test.t
 	$(LINK) -Bgcctestdir/ -nostartfiles -nostdlib -T $(srcdir)/memory_test.t -o $@ memory_test.o
 memory_test.stdout: memory_test
 	$(TEST_READELF) -lWS  $< > $@
